<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".GestioneUtente.LoginActivity">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textSize="35dp"
            android:fontFamily="@font/pacifico"
            android:layout_gravity="center"
            android:textColor="@color/nero"
            />

         <EditText

                android:id="@+id/InserisciEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10sp"
                android:hint="@string/insert_email"
                android:fontFamily="@font/alef"
             />

         <EditText
                android:id="@+id/InserisciPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:inputType="textPassword"
                android:hint="@string/insert_pass"
                android:fontFamily="@font/alef"
             />

        <Button

                android:id="@+id/Accedi"
                style="@style/buttonStyle"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="130dp"
                android:layout_marginRight="130dp"
                android:fontFamily="@font/acme"
                android:textSize="20dp"
                android:text="@string/login"/>

    </LinearLayout>
</ScrollView>